[tool.poetry]
name = "myagent"
version = "0.1.0"
description = ""
authors = ["Marco.Petrella <marco.petrella@ksb.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.4"
pydantic = "^2.9.2"
langchain-openai = "^0.2.3"
langchain-core = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
